chore: add prisma generate to dev script

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --webpack",
+    "dev": "next dev --webpack && npx prisma generate",
     "build": "next build --webpack",
     "start": "next start",
     "upload-backgrounds": "tsx scripts/upload-backgrounds.ts",
