Remove screenshot, database, and Cloudinary dependencies for Vercel deployment

--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "npx prisma generate && next dev --webpack",
-    "build": "npx prisma generate && next build --webpack",
-    "start": "next start",
-    "upload-backgrounds": "tsx scripts/upload-backgrounds.ts",
-    "upload-demo-images": "tsx scripts/upload-demo-images.ts",
-    "upload-overlays": "tsx scripts/upload-overlays.ts",
-    "upload-assets": "tsx scripts/upload-assets.ts"
+    "dev": "next dev --webpack",
+    "build": "next build --webpack",
+    "start": "next start"
   },
   "dependencies": {
-    "@prisma/client": "^6.19.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
@@ -26,9 +21,7 @@
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-tooltip": "^1.2.8",
-    "@sparticuz/chromium": "^141.0.0",
     "class-variance-authority": "^0.7.1",
-    "cloudinary": "^2.8.0",
     "clsx": "^2.1.1",
     "html2canvas": "^1.4.1",
     "konva": "^10.0.8",
@@ -36,9 +29,6 @@
     "modern-screenshot": "^4.6.6",
     "motion": "^12.23.24",
     "next": "16.0.1",
-    "next-cloudinary": "^6.17.0",
-    "prisma": "^6.19.0",
-    "puppeteer-core": "^24.29.1",
     "react": "19.2.0",
     "react-dom": "19.2.0",
     "react-dropzone": "^14.3.8",
@@ -56,10 +46,7 @@
     "@types/react-dom": "^19",
     "babel-plugin-react-compiler": "1.0.0",
     "dotenv": "^17.2.3",
-    "puppeteer": "^24.29.1",
-    "sharp": "^0.34.4",
     "tailwindcss": "^4",
-    "tsx": "^4.20.6",
     "tw-animate-css": "^1.4.0",
     "typescript": "^5"
   }
